--- a/Pages/Categories/Create.cshtml
+++ b/Pages/Categories/Create.cshtml
@@ -15,9 +15,9 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Category.categoryName" class="control-label"></label>
-                <input asp-for="Category.categoryName" class="form-control" />
-                <span asp-validation-for="Category.categoryName" class="text-danger"></span>
+                <label asp-for="Category.CategoryName" class="control-label"></label>
+                <input asp-for="Category.CategoryName" class="form-control" />
+                <span asp-validation-for="Category.CategoryName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
