--- a/Pages/Categories/Details.cshtml
+++ b/Pages/Categories/Details.cshtml
@@ -13,14 +13,14 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Category.categoryName)
+            @Html.DisplayNameFor(model => model.Category.CategoryName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Category.categoryName)
+            @Html.DisplayFor(model => model.Category.CategoryName)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Category.categoryID">Edit</a> |
+    <a asp-page="./Edit" asp-route-id="@Model.Category.CategoryID">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
