--- a/Pages/Categories/Edit.cshtml
+++ b/Pages/Categories/Edit.cshtml
@@ -14,11 +14,11 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Category.categoryID" />
+            <input type="hidden" asp-for="Category.CategoryID" />
             <div class="form-group">
-                <label asp-for="Category.categoryName" class="control-label"></label>
-                <input asp-for="Category.categoryName" class="form-control" />
-                <span asp-validation-for="Category.categoryName" class="text-danger"></span>
+                <label asp-for="Category.CategoryName" class="control-label"></label>
+                <input asp-for="Category.CategoryName" class="form-control" />
+                <span asp-validation-for="Category.CategoryName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
