--- a/Pages/Categories/Index.cshtml
+++ b/Pages/Categories/Index.cshtml
@@ -15,7 +15,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Category[0].categoryName)
+                @Html.DisplayNameFor(model => model.Category[0].CategoryName)
             </th>
             <th></th>
         </tr>
@@ -24,12 +24,12 @@
 @foreach (var item in Model.Category) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.categoryName)
+                @Html.DisplayFor(modelItem => item.CategoryName)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.categoryID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.categoryID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.categoryID">Delete</a>
+                <a asp-page="./Edit" asp-route-id="@item.CategoryID">Edit</a> |
+                <a asp-page="./Details" asp-route-id="@item.CategoryID">Details</a> |
+                <a asp-page="./Delete" asp-route-id="@item.CategoryID">Delete</a>
             </td>
         </tr>
 }
