--- a/Pages/Recipes/Index.cshtml
+++ b/Pages/Recipes/Index.cshtml
@@ -8,54 +8,79 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
+<form method="post">
+    <div class="form-group justify-content-center">
+        <label id="search_1" style="margin: 10px 0 5px 0; font-size: 18px" asp-for="SearchString"><b>Wyszukiwarka</b></label>
+        <input type="text" class="form-control" id="search_1" asp-for="SearchString" placeholder="Nazwa przepisu, autor, kategoria..." />
+        <small id="search_1" class="form-text text-muted">Maksymalnie 50 znaków</small>
+        <span asp-validation-for="SearchString" class="text-danger"></span>
+    </div>
+    <div class="justify-content-center align-content-center">
+        <input type="submit" name="Search" value="Szukaj" class="btn btn-primary" />
+    </div>
+</form>
+
+
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Recipe[0].Name)
+                @Html.DisplayNameFor(model => model.SearchList[0].Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Recipe[0].Image)
+                @Html.DisplayNameFor(model => model.SearchList[0].Ingredients)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Recipe[0].Ingredients)
+                @Html.DisplayNameFor(model => model.SearchList[0].Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Recipe[0].Description)
+                @Html.DisplayNameFor(model => model.SearchList[0].Date)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Recipe[0].Date)
+                @Html.DisplayNameFor(model => model.SearchList[0].Owner.UserName)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Recipe) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Image)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Ingredients)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.RecipeID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.RecipeID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.RecipeID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.SearchList)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Ingredients)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Date)
+                </td>
+                <td>
+                    <a asp-page="/Recipes/UserPage" asp-route-UserName="@item.OwnerUserName">@Html.DisplayFor(modelItem => item.OwnerUserName)</a>
+                </td>
+                <td>
+                    <form method="post">
+
+                        <input type="hidden" name="Like" asp-for="@item.RecipeID" />
+                        <input type="submit" name="Like" value="Like" />
+                    </form>
+                    @Html.DisplayFor(modelItem => item.LikeCounter)
+                    <form method="post">
+
+                        <input type="hidden" name="Like" asp-for="@item.RecipeID" />
+                        <input type="submit" name="Dislike" value="Dislike" />
+                    </form>
+
+                    <a asp-page="/Recipes/AddFavourite" asp-route-id="@item.RecipeID">Do ulubionych</a> |
+
+
+                    <a asp-page="./Details" asp-route-id="@item.RecipeID">Details</a> |
+
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
