--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -19,12 +19,12 @@
         </header>
         <nav>
             <a class="menu" asp-page="/Index">Strona głowna</a>
-            <a class="menu" asp-page="/AddRecipe">Dodaj przepis</a>
-            <a class="menu" asp-page="/Recipies">Przepisy</a>
+            <!--a class="menu" asp-page="/AddRecipe">Dodaj przepis</a-->
+            <a class="menu" asp-page="/Recipes/Index" title="przepisy" >Przepisy</a>
             <a class="menu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Moje Konto </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="menu" style="color: black" asp-area="" asp-page="/Identity/Account/Manage">Mój profil</a>
-                            <a class="menu" style="color: black" asp-area="" asp-page="/Recipes/Favourite">Ulubione</a>
+                            <a class="menu" style="color: black" asp-page="/Identity/Pages/Account/Manage/_ViewImports" title="moj profil">Mój profil</a>
+                            <a class="menu" style="color: black" asp-page="/Recipes/Favourite" title="ulubione">Ulubione</a>
                             <a class="menu" style="color: black" asp-area="" asp-page="">Moje przepisy</a>
                         </div>
             <partial name="_LoginPartial.cshtml" />
