--- a/Pages/Recipes/Create.cshtml
+++ b/Pages/Recipes/Create.cshtml
@@ -2,54 +2,59 @@
 @model PrzepisyWeb.Pages.Recipes.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Dodawanie - ";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1 style="padding: 20px 0 0 0">Dodaj swój nowy przepis!</h1>
 
-<h4>Recipe</h4>
-<hr />
+<h4>Przepis</h4>
+<hr color="red" />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Recipe.Name" class="control-label"></label>
-                <input asp-for="Recipe.Name" class="form-control" />
+                <label asp-for="Recipe.Name" class="control-label">Nazwa</label>
+                <!--input asp-for="Recipe.Name" class="form-control" /-->
+                <textarea asp-for="Recipe.Name" class="form-control" id="titleHelpMeBlock" rows="3" placeholder="Tytuł może pomieścić maksymalnie 80 znaków!"></textarea>
                 <span asp-validation-for="Recipe.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Recipe.Image" class="control-label"></label>
-                <input asp-for="Recipe.Image" class="form-control" />
+                <label asp-for="Recipe.Image" class="control-label">Prześlij zdjęcia</label>
+                <!--input asp-for="Recipe.Image" class="form-control" /-->
                 <span asp-validation-for="Recipe.Image" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Recipe.Ingredients" class="control-label"></label>
-                <input asp-for="Recipe.Ingredients" class="form-control" />
+                <label asp-for="Recipe.Ingredients" class="control-label">Składniki</label>
+                <!--input asp-for="Recipe.Ingredients" class="form-control" /-->
+                <textarea asp-for="Recipe.Ingredients" class="form-control" id="textForIngredients" rows="3" placeholder="Przykład - 200g mąki, 100ml mleka..."></textarea>
                 <span asp-validation-for="Recipe.Ingredients" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Recipe.Description" class="control-label"></label>
-                <input asp-for="Recipe.Description" class="form-control" />
+                <label asp-for="Recipe.Description" class="control-label">Sposób przygotowania</label>
+                <!--input asp-for="Recipe.Description" class="form-control" /-->
+                <textarea asp-for="Recipe.Description" class="form-control" id="textForIngredients" rows="6" placeholder="Tutaj podaj swój przepis"></textarea>
                 <span asp-validation-for="Recipe.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Recipe.Date" class="control-label"></label>
+                <label asp-for="Recipe.Date" class="control-label">Data dodania</label>
                 <input asp-for="Recipe.Date" class="form-control" />
                 <span asp-validation-for="Recipe.Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Stwórz przepis" class="nav-link btn btn-outline-success" />
+            </div>
+            <div>
+                <button asp-page="Index" id="back" type="submit" class="nav-link btn btn-outline-danger">Wróć do listy przepisów</button>
             </div>
         </form>
+
     </div>
-</div>
+    <div class="col-md-6 col-md-offset-2">
+        <img class="right" src="~/my_img/35619.jpg" alt="przepisy" />
+    </div>
 
-<div>
-    <a asp-page="Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
