--- a/Pages/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Pages/Identity/Pages/Account/ForgotPassword.cshtml
@@ -7,7 +7,7 @@
 <h1 style="padding: 20px 0 0 0">Zapomniałeś hasła?</h1>
 <h4>Wpisz swój email.</h4>
 <hr color="red" />
-<div class="row">
+<!--div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
@@ -19,7 +19,27 @@
             <button type="submit" class="btn btn-primary">Zatwierdź</button>
         </form>
     </div>
+</div-->
+<div class="row">
+    <div class="col">
+    </div>
+    <div class="col">
+        <form method="post">
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Input.Email"></label>
+                <input asp-for="Input.Email" class="form-control" />
+                <span asp-validation-for="Input.Email" class="text-danger"></span>
+            </div>
+            <div>
+                <button type="submit" class="btn btn-primary" style="margin: 0 0 0 130px">Zatwierdź</button>
+            </div>
+        </form>
+    </div>
+    <div class="col">
+    </div>
 </div>
+  
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
