--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -11,15 +11,18 @@
         <p><img class="inherit" src="~/my_img/spaghetti-1932466_1920.jpg" alt="zdjecie-jedzonka"></p>
         <h3>Znajdziesz tutaj wiele przepisów i inspiracji kulinarnych.</h3>
         <img class="left" src="~/my_img/cook-1375797_1920.jpg" alt="zdjecie-ksiazki">
-        <p>Posiadamy ogromną bazę przepisów z najróżniejszych kategorii, więc każdy znajdzie coś dla siebie.</p>
-        <p>Również Ty możesz nam pomóc, dodając swoje ulubione przepisy i dzieląc się nimi z innymi.</p>
-        <h4>Nie czekaj! Dołącz już dziś do naszej małej kulinarnej rodzinki.</h4>
+        <p style="margin-top: 30px">Posiadamy ogromną bazę przepisów z najróżniejszych kategorii, więc każdy znajdzie coś dla siebie. 
+            Również Ty możesz nam pomóc, dodając swoje ulubione przepisy i dzieląc się nimi z innymi.</p>
+        <p style="0 0 40px 0">
+
+        </p>
+        <h4 style="40px 0 0 0">Nie czekaj! Dołącz już dziś do naszej małej kulinarnej rodzinki.</h4>
 
     </article>
 </section>
 <section>
     <article>
-        <h3>Oto TOP 10 przepisów według naszych urzytkowników</h3>
+        <h2 style="margin: 50px 0 0 0">Oto TOP 10 przepisów według naszych użytkowników</h2>
         
         <!-- Miejsce na karty-->
     </article>
