--- a/Pages/Recipes/Create.cshtml
+++ b/Pages/Recipes/Create.cshtml
@@ -10,10 +10,12 @@
 
 <h4>Przepis</h4>
 <hr color="red" />
+
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
                 <label asp-for="Recipe.Name" class="control-label">Nazwa</label>
                 <!--input asp-for="Recipe.Name" class="form-control" /-->
@@ -42,7 +44,8 @@
                 <input type="submit" value="Stwórz przepis" class="nav-link btn btn-outline-success" />
             </div>
             <div>
-                <button asp-page="Index" id="back" type="submit" class="nav-link btn btn-outline-danger">Wróć do listy przepisów</button>
+                <input type="button" class="nav-link btn btn-outline-danger" value="Wróć do listy przepisów" onClick="history.back();" />
+                <!--button id="back" type="submit" class="nav-link btn btn-outline-danger">Wróć do listy przepisów</button-->
             </div>
         </form>
 
@@ -50,6 +53,7 @@
     <div class="col-md-6 col-md-offset-2">
         <img class="right" src="~/my_img/35619.jpg" alt="przepisy" />
     </div>
+</div>
 
     @section Scripts {
         @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
