--- a/Pages/Recipes/UserPage.cshtml
+++ b/Pages/Recipes/UserPage.cshtml
@@ -2,39 +2,36 @@
 @model PrzepisyWeb.Pages.Recipes.UserPageModel
 
 @{
-    ViewData["Title"] = "UserPage";
+    ViewData["Title"] = "Przepisy użytkownika - ";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Przepisy użytkownika</h1>
-
+<h1 style="padding: 20px 0 20px 0">Lista przepisów użytkownika</h1>
 <h3>
     
     @Html.DisplayFor(model => model.UsernameDisplay)
 </h3>
+
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.RecipeList[0].Name)
+            Nazwa przepisu
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RecipeList[0].Image)
+                Zdjęcia
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RecipeList[0].Ingredients)
+                Składniki
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RecipeList[0].Description)
+                Sposób przygotowania
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RecipeList[0].Date)
+                Data dodania
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RecipeList[0].OwnerUserName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RecipeList[0].LikeCounter)
+                Liczba polubień
             </th>
             <th></th>
         </tr>
@@ -58,24 +55,19 @@
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.OwnerUserName)
+                <b>@Html.DisplayFor(modelItem => item.LikeCounter)</b>
             </td>
             <td>
                 <form method="post">
                     <input type="hidden" name="UserName" asp-for="@item.OwnerUserName" />
-                    <input type="hidden" name="Like" asp-for="@item.RecipeID" />
-                    <input type="submit" name="Like" value="Like" />
-                </form>
-                @Html.DisplayFor(modelItem => item.LikeCounter)
-                <form method="post">
-                    <input type="hidden" name="UserName" asp-for="@item.OwnerUserName"/>
-                    <input type="hidden" name="Like" asp-for="@item.RecipeID" />
-                    <input type="submit" name="Dislike" value="Dislike" />
-                </form>
-            </td>
-            <td>
-                <a asp-page="/Recipes/AddFavourite" asp-route-id="@item.RecipeID">Do ulubionych</a> 
 
+                    <input type="hidden" name="Like" asp-for="@item.RecipeID" />
+                    <br /><input type="submit" name="Like" value="Lubię" class="btn btn-success" style="margin: 0 0 5px 0" />
+
+                    <input type="hidden" name="Like" asp-for="@item.RecipeID" />
+                    <br /><input type="submit" name="Dislike" value="Nie lubię" class="btn btn-danger" style="margin: 0 0 5px 0" />
+                </form>
+                <a asp-page="./AddFavourite" asp-route-id="@item.RecipeID" class="btn btn-light">Dodaj do ulubionych</a>
             </td>
         </tr>
 }
