--- a/Pages/Recipies.cshtml
+++ b/Pages/Recipies.cshtml
@@ -4,6 +4,11 @@
     ViewData["Title"] = "Przepisy - ";
 }
 
+<h1 style="padding: 20px 0 30px 0">Lista przepisów</h1>
+
+<p>
+    <a asp-page="/Recipes/Create" id="go" type="submit" class="nav-link btn btn-outline-warning">Dodaj nowy przepis</a>
+</p>
 
 <form method="post">
     <div class="form-group justify-content-center">
@@ -13,7 +18,7 @@
         <span asp-validation-for="SearchString" class="text-danger"></span>
     </div>
     <div class="justify-content-center align-content-center">
-        <input type="submit" name="Search" value="Szukaj" class="btn btn-primary" />
+        <input type="submit" name="Search" value="Szukaj" class="btn btn-outline-info" style="margin: 0 0 50px 0" />
     </div>
 </form>
 
@@ -22,22 +27,25 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.SearchList[0].Name)
+                Nazwa przepisu
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SearchList[0].Image)
+                Zdjęcia
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SearchList[0].Ingredients)
+                Składniki
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SearchList[0].Description)
+                Sposób przygotowania
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SearchList[0].Date)
+                Data dodania
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.SearchList[0].Owner.UserName)
+                Nazwa użytkownika
+            </th>
+            <th>
+                Liczba polubień
             </th>
             <th></th>
         </tr>
@@ -45,89 +53,47 @@
     <tbody>
         @foreach (var item in Model.SearchList)
         {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Image)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Ingredients)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Date)
-            </td>
-            <td>
-                <a asp-page="/Recipes/UserPage" asp-route-UserName="@item.OwnerUserName">@Html.DisplayFor(modelItem => item.OwnerUserName)</a> 
-            </td>
-            <td>
-                <form method="post">
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Image)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Ingredients)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Date)
+                </td>
+                <td>
+                    <a asp-page="/Recipes/UserPage" asp-route-UserName="@item.OwnerUserName">@Html.DisplayFor(modelItem => item.OwnerUserName)</a>
+                </td>
+                <td>
+                    <b>@Html.DisplayFor(modelItem => item.LikeCounter)</b>
+                </td>
+                <td>
+                    <form method="post">
+                        <input type="hidden" name="UserName" asp-for="@item.OwnerUserName" />
+                        <input type="hidden" name="Like" asp-for="@item.RecipeID" />
+                        <br /><input type="submit" name="Like" value="Lubię" class="btn btn-success" style="margin: 0 0 5px 0" />
 
-                    <input type="hidden" name="Like" asp-for="@item.RecipeID" />
-                    <input type="submit" name="Like" value="Like" />
-                </form>
-                @Html.DisplayFor(modelItem => item.LikeCounter)
-                <form method="post">
+                        <input type="hidden" name="Like" asp-for="@item.RecipeID" />
+                        <br /><input type="submit" name="Dislike" value="Nie lubię" class="btn btn-danger" style="margin: 0 0 5px 0" />
+                    </form>
 
-                    <input type="hidden" name="Like" asp-for="@item.RecipeID" />
-                    <input type="submit" name="Dislike" value="Dislike" />
-                </form>
+                    <a asp-page="/Categories/AddCategory" asp-route-id="@item.RecipeID" class="btn btn-light" style="margin: 0 0 5px 0">Dodaj kategorie</a>
+                    <br /><a asp-page="/Recipes/AddFavourite" asp-route-id="@item.RecipeID" class="btn btn-light">Dodaj do ulubionych</a>
 
-                <a asp-page="/Categories/AddCategory" asp-route-id="@item.RecipeID">Dodaj kategorie</a>
-                <a asp-page="/Recipes/AddFavourite" asp-route-id="@item.RecipeID">Do ulubionych</a> |
-
-
-                <a asp-page="./Details" asp-route-id="@item.RecipeID">Details</a> |
-
-            </td>
-        </tr>
+                </td>
+            </tr>
         }
     </tbody>
 </table>
 
-
-
-
-
-<div class="card" style="card_p; margin: 0 0 15px 0">
-    <img class="card-img-top" src="https://www.telepolis.pl/images/2021/02/pale-moon-browser-29.jpg" alt="Card image cap">
-    <div class="card-body">
-        <!---<h5 class="card-title">Card title</h5>-->
-        <!---<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
-        <a href="#" class="btn btn-primary btn-lg btn-block" style="">Zobacz ↑</a>
-    </div>
-</div>
-
-<div class="card" style="card_p; margin: 0 0 15px 0">
-    <img class="card-img-top" src="https://assets.tmecosys.com/image/upload/t_web767x639/img/recipe/vimdb/202564_0-1059-5478-5478.jpg" alt="Card image cap">
-    <div class="card-body">
-        <!---<h5 class="card-title">Card title</h5>-->
-        <!---<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
-        <a href="#" class="btn btn-primary btn-lg btn-block">Zobacz ↑</a>
-    </div>
-</div>
-
-<div class="card" style="card_p; margin: 0 0 15px 0">
-    <img class="card-img-top" src="https://natashaskitchen.com/wp-content/uploads/2018/08/Chicken-Stir-Fry-1-1.jpg" alt="Card image cap">
-    <div class="card-body">
-        <!---<h5 class="card-title">Card title</h5>-->
-        <!---<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
-        <a href="#" class="btn btn-primary btn-lg btn-block">Zobacz ↑</a>
-    </div>
-</div>
-
-<div class="card" style="card_p; margin: 0 0 15px 0">
-    <img class="card-img-top" src="https://ocdn.eu/pulscms-transforms/1/NB6k9kpTURBXy82YmJjYTRkZGQwN2I4MGQ4NTlkZmEzODg3MmRjMGZmOS5qcGeTlQMBzMjNBEXNAmeTBc0DFM0BvJMJpjA3NjE4NQaBoTAB/meksykanskie-buritto.jpg" alt="Card image cap">
-    <div class="card-body">
-        <!---<h5 class="card-title">Card title</h5>-->
-        <!---<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
-        <a href="#" class="btn btn-primary btn-lg btn-block">Zobacz ↑</a>
-    </div>
-</div>
 
 
 
