--- a/Pages/Recipes/AddFavourite.cshtml
+++ b/Pages/Recipes/AddFavourite.cshtml
@@ -6,13 +6,13 @@
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h3 style="padding: 20px 0 0 0">Czy chcesz dodać ten przepis do ulubionych?</h1>
+<h3 style="padding: 20px 0 0 0">Czy chcesz dodać ten przepis do ulubionych?</h3>
     <h4>Dodawanie</h4>
     <hr color="red" />
 
     <div class="shadow-lg p-3 mb-5 bg-white rounded">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <input type="hidden" asp-for="Recipe.RecipeID" />
+        <input type="hidden" name="id" asp-for="Recipe.RecipeID" />
 
         <p><b>Nazwa przepisu</b>  : @Html.DisplayFor(model => model.Recipe.Name)</p>
         <p><b>Zdjęcia</b> : @Html.DisplayFor(model => model.Recipe.Image)</p>
