--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
         </header>
         <nav>
             <a class="menu" asp-area="" asp-page="/Index">Strona głowna</a>
-            <!--a class="menu" asp-area="" asp-page="/Recipes/Create">Dodaj przepis</a-->
+            <a class="menu" asp-area="" asp-page="/Categories/Index">Kategorie</a>
             <a class="menu" asp-area="" asp-page="/Recipies">Przepisy</a>
             <a class="menu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Moje Konto </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
