--- a/Pages/Categories/AddCategory.cshtml
+++ b/Pages/Categories/AddCategory.cshtml
@@ -5,31 +5,28 @@
     ViewData["Title"] = "AddCategory";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
+<h3 style="padding: 20px 0 0 0"> Podaj kategorię, która chcesz dodać do przepisu</h3>
 
-<h1>Dodaj Kategorie</h1>
+    <h4>Dodawanie</h4>
+    <hr color="red" />
 
-<h4>Podaj kategorię, która chcesz dodać do przepisu</h4>
-<hr />
-
-
-{
     <form method="post">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group">
-            <label class="control-label">Wpisz tutaj</label>
-            <input type="hidden" name="id" asp-for="@Model.Recipe.RecipeID" / />
-            <input type="text" asp-for="CategoriesText" placeholder="Przykład: kategoria nr1, kategoria nr2, ..." />
-        </div>
-        <div class="form-group">
+        <input type="hidden" name="id" asp-for="@Model.Recipe.RecipeID" />
 
-            <input type="submit" value="Dodaj" class="btn btn-primary" />
+        <div class="form-group">
+            <label asp-for="CategoriesText" class="control-label">Nazwy kategorii</label>
+            <textarea asp-for="CategoriesText" class="form-control" id="titleHelpMeBlock" rows="3" placeholder="Tutaj wpisz kategorie, które chcesz dodać do danego przepisu, np. kategoria nr1, kategoria nr2, ..."></textarea>
+            <span asp-validation-for="CategoriesText" class="text-danger"></span>
         </div>
+
+        <form method="post">
+            <input type="submit" value="Dodaj" class="btn btn-outline-success" style="margin: 0 0 10px 0" />
+            <div>
+                <input type="button" class="nav-link btn btn-outline-danger" value="Wróć do listy przepisów" onClick="history.back();" />
+            </div>
+        </form>
     </form>
-
-
-    <div>
-        <a asp-page="Index">Powrót</a>
-    </div>
 
     @section Scripts {
         @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
