--- a/Pages/Categories/Details.cshtml
+++ b/Pages/Categories/Details.cshtml
@@ -2,25 +2,24 @@
 @model PrzepisyWeb.Pages.Categories.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Szczegóły - ";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<h1 style="padding: 20px 0 0 0">Szczegóły</h1>
+<h4>Kategoria</h4>
+<hr color="red" />
 
-<div>
-    <h4>Category</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Category.CategoryName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Category.CategoryName)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-page="./Edit" asp-route-id="@Model.Category.CategoryID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+<div class="shadow-lg p-3 mb-5 bg-white rounded">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <input type="hidden" asp-for="Category.CategoryID" />
+
+    <p><b>Nazwa kategorii</b> : @Html.DisplayFor(model => model.Category.CategoryName)</p>
+
+    <form method="post">
+        <a asp-page="./Edit" asp-route-id="@Model.Category.CategoryID" class=" btn btn-outline-info" style="margin: 0 0 10px 0">Edytuj</a>
+        <div>
+            <a asp-page="./Index" class=" btn btn-outline-danger">Wróć do listy kategorii</a>
+        </div>
+    </form>
 </div>
