--- a/Pages/Categories/Index.cshtml
+++ b/Pages/Categories/Index.cshtml
@@ -2,20 +2,20 @@
 @model PrzepisyWeb.Pages.Categories.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Kategorie - ";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
-
+<h1 style="padding: 20px 0 30px 0"1>Kategorie</h1>
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create" id="go" type="submit" class="nav-link btn btn-outline-warning">Dodaj nową kategorię</a>
 </p>
+
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Category[0].CategoryName)
+                Nazwa kategorii
             </th>
             <th></th>
         </tr>
@@ -27,9 +27,9 @@
                 @Html.DisplayFor(modelItem => item.CategoryName)
             </td>
             <td>
-                <a asp-page="./Edit" asp-route-id="@item.CategoryID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.CategoryID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.CategoryID">Delete</a>
+                <a asp-page="./Edit" asp-route-id="@item.CategoryID" class="btn btn-light" style="margin: 0 0 5px 0">Edytuj</a>
+                <br /><a asp-page="./Details" asp-route-id="@item.CategoryID" class="btn btn-light" style="margin: 0 0 5px 0">Szczegóły</a>
+                <br /><a asp-page="./Delete" asp-route-id="@item.CategoryID" class="btn btn-light" style="margin: 0 0 5px 0">Usuń</a>
             </td>
         </tr>
 }
