--- a/Pages/Recipies.cshtml
+++ b/Pages/Recipies.cshtml
@@ -89,6 +89,77 @@
     </tbody>
 </table>
 
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.SearchCategegoryRecipe[0].Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SearchCategegoryRecipe[0].Image)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SearchCategegoryRecipe[0].Ingredients)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SearchCategegoryRecipe[0].Description)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SearchCategegoryRecipe[0].Date)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SearchCategegoryRecipe[0].Owner.UserName)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.SearchCategegoryRecipe)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Image)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Ingredients)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Date)
+                </td>
+                <td>
+                    <a asp-page="/Recipes/UserPage" asp-route-UserName="@item.OwnerUserName">@Html.DisplayFor(modelItem => item.OwnerUserName)</a>
+                </td>
+                <td>
+                    <form method="post">
+
+                        <input type="hidden" name="Like" asp-for="@item.RecipeID" />
+                        <input type="submit" name="Like" value="Like" />
+                    </form>
+                    @Html.DisplayFor(modelItem => item.LikeCounter)
+                    <form method="post">
+
+                        <input type="hidden" name="Like" asp-for="@item.RecipeID" />
+                        <input type="submit" name="Dislike" value="Dislike" />
+                    </form>
+
+                    <a asp-page="/Categories/AddCategory" asp-route-id="@item.RecipeID">Dodaj kategorie</a>
+                    <a asp-page="/Recipes/AddFavourite" asp-route-id="@item.RecipeID">Do ulubionych</a> |
+
+
+                    <a asp-page="./Details" asp-route-id="@item.RecipeID">Details</a> |
+
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
+
 
 
 
