--- a/Pages/Recipes/Create.cshtml
+++ b/Pages/Recipes/Create.cshtml
@@ -39,7 +39,7 @@
 
                 @for (var i = 0; i < Model.CategoriesList.Count() ; i++)
                 {
-                    <input name="@Model.CategoriesList[i].categoryName" type="checkbox" id="@Model.CategoriesList[i].categoryID" />@Model.CategoriesList[i].categoryName<br />
+                    <input name="@Model.CategoriesList[i].CategoryName" type="checkbox" id="@Model.CategoriesList[i].CategoryID" />@Model.CategoriesList[i].CategoryName<br />
                 }
             </div>
             <div class="form-group">
