zmiany z prod + front z prod-gabrysia

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
             @RenderBody()
         </main>
     </div>
+</div>
 
     <footer>
         &copy; 2021 - PrzepisyWeb - <a asp-area="" asp-page="/Privacy">Privacy</a>   
