Dodanie like/Dislike W przepisach

--- a/Pages/Recipies.cshtml
+++ b/Pages/Recipies.cshtml
@@ -29,6 +29,20 @@
         <img class="card-img-top" src="@Model.SearchList[i].Image">
         <div class="card-body">
             <p style="text-align:center" class="card-text">@Model.SearchList[i].Description</p>
+            <form method="post">
+
+                <input type="hidden" name="Like" asp-for="@Model.SearchList[i].RecipeID" />
+                <input type="submit" name="Like" value="Like" />
+            </form>
+            @Html.DisplayFor(modelItem => Model.SearchList[i].LikeCounter)
+            <form method="post">
+
+                <input type="hidden" name="Like" asp-for="@Model.SearchList[i].RecipeID" />
+                <input type="submit" name="Dislike" value="Dislike" />
+            </form>
+
+            <a asp-page="/Recipes/AddFavourite" asp-route-id="@Model.SearchList[i].RecipeID">Do ulubionych</a> |
+
             <div class="col-md-12 text-center">
                 <a href="/Recipes/Details?id=@Model.SearchList[i].RecipeID">Zobacz szczegóły przepisu.</a>
             </div>
@@ -36,19 +50,6 @@
     </div>
 }
 
-@for (int i = 0; i < Model.SearchCategegoryRecipe.Count(); i++)
-{
-    <div class="card">
-        <h3 style="text-align:center" class="card-title">@Model.SearchCategegoryRecipe[i].Name</h3>
-        <img class="card-img-top" src="@Model.SearchCategegoryRecipe[i].Image">
-        <div class="card-body">
-            <p style="text-align:center" class="card-text">@Model.SearchCategegoryRecipe[i].Description</p>
-            <div class="col-md-12 text-center">
-                <a href="/Recipes/Details?id=@Model.SearchCategegoryRecipe[i].RecipeID">Zobacz szczegóły przepisu.</a>
-            </div>
-        </div>
-    </div>
-}
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
