--- a/Pages/Recipes/Create.cshtml
+++ b/Pages/Recipes/Create.cshtml
@@ -19,7 +19,7 @@
             <div class="form-group">
                 <label asp-for="Recipe.Name" class="control-label">Nazwa przepisu</label>
                 <!--input asp-for="Recipe.Name" class="form-control" /-->
-                <textarea asp-for="Recipe.Name" class="form-control" id="titleHelpMeBlock" rows="3" placeholder="Tytuł może pomieścić maksymalnie 80 znaków!"></textarea>
+                <textarea asp-for="Recipe.Name" class="form-control" rows="3" placeholder="Tytuł może pomieścić maksymalnie 80 znaków!"></textarea>
                 <span asp-validation-for="Recipe.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -30,31 +30,24 @@
             <div class="form-group">
                 <label asp-for="Recipe.Ingredients" class="control-label">Składniki</label>
                 <!--input asp-for="Recipe.Ingredients" class="form-control" /-->
-                <textarea asp-for="Recipe.Ingredients" class="form-control" id="textForIngredients" rows="3" placeholder="Przykład - 200g mąki, 100ml mleka..."></textarea>
+                <textarea asp-for="Recipe.Ingredients" class="form-control" rows="3" placeholder="Przykład - 200g mąki, 100ml mleka..."></textarea>
                 <span asp-validation-for="Recipe.Ingredients" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Recipe.Description" class="control-label">Sposób przygotowania</label>
                 <!--input asp-for="Recipe.Description" class="form-control" /-->
-                <textarea asp-for="Recipe.Description" class="form-control" id="textForIngredients" rows="6" placeholder="Tutaj podaj swój przepis"></textarea>
+                <textarea asp-for="Recipe.Description" class="form-control" rows="6" placeholder="Tutaj podaj swój przepis"></textarea>
                 <span asp-validation-for="Recipe.Description" class="text-danger"></span>
             </div>
-            <!--  <div>
-                Kategorie<br />
-
-                @for (var i = 0; i < Model.CategoriesList.Count(); i++)
-                {
-                    <input name="@Model.CategoriesList[i].CategoryName" type="checkbox" id="@Model.CategoriesList[i].CategoryID" />@Model.CategoriesList[i].CategoryName<br />
-                }
-            </div>-->
             <div class="form-group">
                 <input type="submit" value="Stwórz przepis" class="nav-link btn btn-outline-success" />
             </div>
+`           </form>
             <div>
                 <input type="button" class="nav-link btn btn-outline-danger" value="Wróć do listy przepisów" onClick="history.back();" />
                 <!--button id="back" type="submit" class="nav-link btn btn-outline-danger">Wróć do listy przepisów</button-->
             </div>
-        </form>
+        
 
     </div>
     <div class="col-md-6 col-md-offset-2">
