Wszystko z listy zrobione -poprawa dodawania kategorii - naprawienie moich przepisów - dodanie możliwości dodania 3 zdjęć

--- a/Pages/Categories/Create.cshtml
+++ b/Pages/Categories/Create.cshtml
@@ -18,7 +18,7 @@
 
             <div class="form-group">
                 <label asp-for="Category.CategoryName" class="control-label">Nazwa kategorii</label>
-                <textarea asp-for="Category.CategoryName" class="form-control" id="titleHelpMeBlock" rows="3" placeholder="Tutaj podaj kategorię, którą chcesz dodać..."></textarea>
+                <textarea asp-for="CategoriesText" class="form-control" id="titleHelpMeBlock" rows="3" placeholder="Tutaj podaj kategorię, którą chcesz dodać..."></textarea>
                 <span asp-validation-for="Category.CategoryName" class="text-danger"></span>
             </div>
 
